compiler/testData/diagnostics/tests/smartCasts/loops/whileNull.fir.kt
fun foo(s: String?): Int {
    while (s==null) {
    }
    return s.<!INAPPLICABLE_CANDIDATE!>length<!>
}